Added images, updated layouts, and typography

--- a/Development/list.css
+++ b/Development/list.css
@@ -1,12 +1,7 @@
-.pavilion-projects .project-menu {
+.project-menu {
     list-style: none; 
     font-family: 'Varela', sans-serif;
-    margin: 1rem 0 0 0;
     padding: 0;
+    font-size: 0.75rem;
 }
 
-.pavilion-projects .project-menu .project-list-item {
-    display: inline-block;
-    padding: 0 0.9375rem; /*15px/16px*/
-    margin: 0 -0.234375rem; /* ((15px/2)/2) / 16px*/
-}
