--- a/Development/layout.css
+++ b/Development/layout.css
@@ -1,7 +1,9 @@
-@media screen and (min-width: 360px) and (orientation: portrait){
+@media screen and (max-width: 360px) and (orientation: portrait){
     .container{
         margin: 0 1.5rem;
     }   
 
-
+    .service-content, .team-member-content {
+        margin-bottom: 1.5rem;
+    }
 }
