--- a/Development/style.css
+++ b/Development/style.css
@@ -1,4 +1,5 @@
 @import url("normalize.css");
 @import url("typography.css");
 @import url("layout.css");
-@import url("list.css")
+@import url("list.css");
+@import url("responsiveimage.css")
