--- a/Development/style.css
+++ b/Development/style.css
@@ -2,4 +2,5 @@
 @import url("typography.css");
 @import url("layout.css");
 @import url("list.css");
-@import url("responsiveimage.css")
+@import url("responsiveimage.css");
+@import url("navigationalbar.css");
