--- a/Development/list.css
+++ b/Development/list.css
@@ -2,6 +2,8 @@
     list-style: none; 
     font-family: 'Varela', sans-serif;
     padding: 0;
-    font-size: 0.75rem;
+}    
+@media (min-width: 320px) and (max-width: 425px) {
+    .project-menu { font-size: 0.75rem; }
 }
 
