--- a/Development/responsiveimage.css
+++ b/Development/responsiveimage.css
@@ -1,8 +1,24 @@
-@media screen and (max-width: 360px) and (orientation: portrait){
+@media (min-width: 320px) and (max-width: 424px){
     img {
-        max-width: 100%;
-       /* margin-bottom: 2rem; */
+        width: 100%;
+    }
+    .img-container { margin: 0 0 1.5rem 0;}
+
+    /*============== HERO BANNER ==============*/
+    .hero-banner img {
+        display: none;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 767px) { 
+    img {
+        width: 100%;
     }
 
-    .img-container { margin: 0 0 1.5rem 0;}
+    .hero-banner img {
+        float: right;
+        width: 66.666%;
+        z-index: -99999;
+        position: relative;
+    }
 }
