--- a/Development/style.css
+++ b/Development/style.css
@@ -1,6 +1,10 @@
 @import url("normalize.css");
 @import url("typography.css");
-@import url("layout.css");
+@import url("responsive-layout.css");
 @import url("list.css");
 @import url("responsiveimage.css");
 @import url("navigationalbar.css");
+
+* {
+    box-sizing: border-box;
+}
