--- a/Development/responsive-layout.css
+++ b/Development/responsive-layout.css
@@ -1,20 +1,3 @@
-.row {
-    width: 100%;
-    margin: 0;
-}
- 
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-
-/*============== HEADER ==============*/
-.header {
-    padding: 1.5rem 0;
-}
-
 @media (min-width: 320px) and (max-width: 425px){
     .container{
         margin: 0 1.5rem;
@@ -31,24 +14,73 @@
     }
 }
 
-@media (min-width: 426px) and (max-width: 767px) {
-    .container{
-        margin: 0 1.5rem;
-    }   
-    /*============== GRID ==============*/
+/*================== LAYOUT ==================*/ 
+@media screen and (max-width: 1440px) {
+    /* Description: 
+        The desktop site consists of 12 columns with the margins of 
+        the container spanning 64px on each side. The gutter for each
+        column is 16px     
+        
+        1440/12 = 120px w/out gutter 
 
-    .span-1 {
-        width: 33.333%;
-        float: left;
-    }
+        The width of the columns increases according to the span 
+        of the columns 
+
+        120*1 = 120px (1 column) = 7.5em 
+        120*2 = 240px (2 columns) = 15em 
+        120*3 = 360px (3 columns) = 22.5em 
+        120*4 = 480px (4 columns) = 30em 
+        120*5 = 600px (5 columns) = 37.5em 
+        120*6 = 720px (6 columns) = 45em 
+        120*7 = 840px (7 columns) = 52.5em 
+        120*8 = 960px (8 columns) = 60em 
+        120*9 = 1080px (9 columns) = 67.5em 
+        120*10 = 1200px (10 columns) = 75em 
+        120*11 = 1320px (11 columns) = 82.5em 
+        120*12 = 1440px (12 columns) = 90em 
+
+        The gutter is 16px. Padding is added to make the spacing for 
+        the columns.
+        16/16 = 1em 
+
+    */
+    .col { width: 8.333%; }
+    .span-2 { width: 16.667%; }
+    .span-3 { width: 25%; }
+    .span-4 { width: 33.333%; }
+    .span-5 { width: 41.667%; }
+    .span-6 { width: 50%; }
+    .span-7 { width: 58.333%; }
+    .span-8 { width: 66.667%; }
+    .span-9 { width: 75%; }
+    .span-10 { width: 83.333%; }
+    .span-11 { width: 91.667%; }
+    .row { width: 100%; }
     
-    .span-2 {
-        width: 66.666%;
-        float: left;
+    .col, 
+    .span-2, 
+    .span-3, 
+    .span-4, 
+    .span-5, 
+    .span-6,
+    .span-7,
+    .span-8, 
+    .span-9,
+    .span-10,
+    .span-11 {
+        float:left;
+        padding-right: 1em;
     }
-    
-    .span-3 {
-        width: 99.999%;
-        float: left;
+    .row {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .row::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+    .container {
+        margin: 0 1em;
     }
 }
