--- a/Development/responsiveimage.css
+++ b/Development/responsiveimage.css
@@ -1,24 +1,14 @@
 @media (min-width: 320px) and (max-width: 424px){
+/*============== IMAGES ==============*/
     img {
         width: 100%;
     }
     .img-container { margin: 0 0 1.5rem 0;}
-
-    /*============== HERO BANNER ==============*/
-    .hero-banner img {
-        display: none;
-    }
 }
 
-@media (min-width: 425px) and (max-width: 767px) { 
+@media screen and (max-width: 1440px) {
     img {
         width: 100%;
-    }
-
-    .hero-banner img {
-        float: right;
-        width: 66.666%;
-        z-index: -99999;
-        position: relative;
+        height: auto;
     }
 }
