--- a/Development/style.css
+++ b/Development/style.css
@@ -6,6 +6,7 @@
 @import url("hero-banner.css");
 @import url("responsiveimage.css");
 @import url("list.css");
+@import url("button.css");
 * {
     box-sizing: border-box;
     margin: 0;
