--- a/Development/hero-banner.css
+++ b/Development/hero-banner.css
@@ -16,3 +16,11 @@
         margin: 0 0 3.5em;
     }
 }
+
+@media (min-width: 1023px) and (max-width: 1440px){
+    h1, h2, h3, h4, h5, h6 {font-weight: 300;} 
+    .banner-text-container {
+        margin-left: 4em;
+    }
+
+}
