--- a/Development/typography.css
+++ b/Development/typography.css
@@ -4,7 +4,9 @@
 body {
     line-height: 1.5;
 }
-
+a {
+    color: #151717;
+}
 /*============== FONTS ==============*/
 h1, h2, h3, h4, h5, h6 { margin: 0.5rem 0;} 
 h6 { font-size: 1rem; } /*(16px) / (1rem/16px)*/
@@ -16,12 +18,8 @@ h1 {
     font-size: 3.5rem; /* 56px/16px */
     color: #151717;
 } 
-p{ 
-    font-family: 'Varela', sans-serif;
-    font-size: 1rem;
-    font-weight: 300;
-}
 
+p {font-size: 1em;}
 /*============== HERO BANNER ==============*/
 .hero-banner .hero-title span,
 .about-content span{color: #EBCA55;}
@@ -116,12 +114,11 @@ p{
 
     .hero-title {
         font-size: 6em;
-        font-weight: 700;
+        font-weight: 300;
+        color: #FFF;
         letter-spacing: 0.25em;
         line-height: 6rem;
     }
-
-    .hero-title span { font-weight: 800;}
 
     .about { font-size: 4em; }
 
